# Notebook_App

./: README.md  pyproject.toml
src/: __init__.py  index.py
src/config/: db.py
src/routes/: note.py
src/schemas/: note.py
src/templates/: index.html
