[project]
name = "notebook-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Roman", email = "mromankhan005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "motor>=3.7.0",
    "pymongo>=4.12.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]

[project.scripts]
notebook-app = "notebook_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
